create timer id

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JS-SIMON</title>
 </head>
 <body>
+    <div id="timer"></div>
     <div id="numbers"></div>
 
     <script src="./main.js"></script>
