--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="timer"></div>
     <div id="numbers"></div>
-
+    <div id="inputContainer"></div>
     <script src="./main.js"></script>
 </body>
 </html>
