try to create final function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="timer"></div>
     <div id="numbers"></div>
     <div id="inputContainer"></div>
+    <button id="button">Verifica</button>
     <script src="./main.js"></script>
 </body>
 </html>
