--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>JS-SIMON</title>
 </head>
 <body>
-    <div id="timer"></div>
-    <div id="numbers"></div>
-    <div id="inputContainer"></div>
-    <button id="button">Verifica</button>
+    <div class="container d-flex justify-content-evenly align-items-center bg-dark text-light my-4 p-4 text-center">
+        <div id="timer" class="mt-2"></div>
+        <div id="numbers" class="mt-2"></div>
+        <div id="inputContainer" class="mt-2"></div>
+        <button id="button" class="btn btn-primary mt-2">Verifica</button>
+    </div>
     <script src="./main.js"></script>
     <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
