add rounded class to container

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>JS-SIMON</title>
 </head>
 <body>
-    <div class="container d-flex justify-content-evenly align-items-center bg-dark text-light my-4 p-4 text-center">
+    <div class="container d-flex justify-content-evenly align-items-center bg-dark text-light my-4 p-4 text-center rounded">
         <div id="timer" class="mt-2"></div>
         <div id="numbers" class="mt-2"></div>
         <div id="inputContainer" class="mt-2"></div>
