--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <div class="container d-flex justify-content-evenly align-items-center bg-dark text-light my-4 p-4 text-center rounded">
         <div id="timer" class="mt-2"></div>
         <div id="numbers" class="mt-2"></div>
-        <div id="inputContainer" class="mt-2"></div>
-        <button id="button" class="btn btn-primary mt-2">Verifica</button>
+        <form>
+            <div id="inputContainer" class="mt-2"></div>
+            <button type="submit" id="button" class="btn btn-primary mt-2">Verifica</button>
+        </form>
+        
+        
     </div>
     <script src="./main.js"></script>
     <!--Bootstrap script-->
